--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: scala
 scala:
     - 2.12.0
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt
 before_script:
   - wget https://github.com/Z3Prover/z3/releases/download/z3-4.6.0/z3-4.6.0-x64-ubuntu-14.04.zip 
   - unzip z3-4.6.0-x64-ubuntu-14.04.zip
