--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 before_script:
   - wget https://github.com/Z3Prover/z3/releases/download/z3-4.8.6/z3-4.8.6-x64-ubuntu-16.04.zip
   - unzip z3-4.8.6-x64-ubuntu-16.04.zip
-  - mv z3-4.8.6-x64-ubuntu-16.04/bin/com.microsoft.z3.jar lib/
+  - cp z3-4.8.6-x64-ubuntu-16.04/bin/com.microsoft.z3.jar lib/
   - export PATH=$PATH:$PWD/z3-4.8.6-x64-ubuntu-16.04/bin/
   - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/z3-4.8.6-x64-ubuntu-16.04/bin/
 script: sbt ++$TRAVIS_SCALA_VERSION test
