--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,27 @@ jobs:
     - name: Print CVC4 Version
       run: cvc4 --version
 
+    - name: Cache Delphi
+      id: cache-delphi
+      uses: actions/cache@v1
+      with:
+        path: delphi/
+        key: ${{ runner.os }}-delphi-${{ hashFiles('get-delphi-linux.sh') }}-1
+
+    - name: Download delphi
+      if: steps.cache-delphi.outputs.cache-hit != 'true'
+      run: ./get-delphi-linux.sh
+
+    - name: Add delphi to Path
+      run: |
+       ls $GITHUB_WORKSPACE/delphi/bin/
+       echo "$GITHUB_WORKSPACE/delphi/bin/" >> $GITHUB_PATH
+    
+    - name: Add oracles to Path
+      run: |
+       ls $GITHUB_WORKSPACE/oracles/
+       echo "$GITHUB_WORKSPACE/oracles/" >> $GITHUB_PATH
+    
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
@@ -126,6 +147,26 @@ jobs:
 
     - name: Print CVC4 Version
       run: cvc4 --version
+
+    - name: Cache delphi
+      id: cache-delphi
+      uses: actions/cache@v1
+      with:
+        path: delphi/
+        key: ${{ runner.os }}-delphi-${{ hashFiles('get-delphi-macos.sh') }}-1
+
+    - name: Download delphi
+      if: steps.cache-delphi.outputs.cache-hit != 'true'
+      run: ./get-delphi-macos.sh
+
+    - name: Add delphi to Path
+      run: |
+       ls $GITHUB_WORKSPACE/delphi/bin/
+       echo "$GITHUB_WORKSPACE/delphi/bin/" >> $GITHUB_PATH
+    - name: Add oracles to Path
+      run: |
+       ls $GITHUB_WORKSPACE/oracles/
+       echo "$GITHUB_WORKSPACE/oracles/" >> $GITHUB_PATH
 
     - name: Compile
       run: sbt compile
