--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,25 @@ jobs:
     - name: Print Z3 Version
       run: z3 --version
 
+    - name: Cache CVC4
+      id: cache-cvc4
+      uses: actions/cache@v1
+      with:
+        path: cvc4/
+        key: ${{ runner.os }}-cvc4-${{ hashFiles('get-cvc4-linux.sh') }}-1
+
+    - name: Download cvc4
+      if: steps.cache-cvc4.outputs.cache-hit != 'true'
+      run: ./get-cvc4-linux.sh
+ 
+    - name: Add CVC4 to Path
+      run: |
+       ls $GITHUB_WORKSPACE/cvc4/bin/
+       echo "$GITHUB_WORKSPACE/cvc4/bin/" >> $GITHUB_PATH
+
+    - name: Print CVC4 Version
+      run: cvc4 --version
+
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
@@ -88,6 +107,25 @@ jobs:
   
     - name: Print Z3 Version
       run: z3 --version 
+
+    - name: Cache CVC4
+      id: cache-cvc4
+      uses: actions/cache@v1
+      with:
+        path: cvc4/
+        key: ${{ runner.os }}-cvc4-${{ hashFiles('get-cvc4-macos.sh') }}-1
+    
+    - name: Download cvc4
+      if: steps.cache-cvc4.outputs.cache-hit != 'true'
+      run: ./get-cvc4-macos.sh
+ 
+    - name: Add CVC4 to Path
+      run: |
+       ls $GITHUB_WORKSPACE/cvc4/bin/
+       echo "$GITHUB_WORKSPACE/cvc4/bin/" >> $GITHUB_PATH
+
+    - name: Print CVC4 Version
+      run: cvc4 --version
 
     - name: Compile
       run: sbt compile
