--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Print Z3 Version
       run: z3 --version
 
+     - name: Download cvc4
+      run: ./get-cvc4-linux.sh
+
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
